# WriteVideo

./: .cproject  .project  CMakeLists.txt  README.txt
Debug/: ejecutar.bat
src/: Config.cpp  Config.h  RecordWebCam.cpp  license.txt
